--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name= content="自我介紹" />
+        <meta name= content="宗霖的自我介紹" />
         <meta name= content="宗霖" />
         <title>宗霖的自介</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
