--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
                         台北市萬華區長泰街77號三樓
                         <a href="mailto:name@email.com">a110070001@mail.shu.edu.tw</a>
                     </div>
-                    <p class="lead mb-5">我是一名棒球員，目前就讀世新大學，背號: 7號 ，守備位置: 外野手，從小三開始加入球隊開啟我的棒球生涯，我的座右銘: 努力不懈，堅持到底。
-                        I am a baseball player, currently studying at Shih Hsin University, back number: No. 7, fielding position: outfielder, I started my baseball career by joining the team since I was a junior, my motto: work hard and persevere to the end.
-                    </p>
+                    <p class="lead mb-5">我是一名棒球員，目前就讀世新大學，背號: 7號 ，守備位置: 外野手，從小三開始加入球隊開啟我的棒球生涯，我的座右銘: 努力不懈，堅持到底。</p>
+                    <p class="lead mb-5">I am a baseball player, currently studying at Shih Hsin University, back number: No. 7, fielding position: outfielder, I started my baseball career by joining the team since I was a junior, my motto: work hard and persevere to the end.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
