--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5"></div>
                         <div class="flex-grow-1">
                             <h3 class="mb-0">台北市立陽明高中</h3>
                             <div class="subheading mb-3">體育班</div>
@@ -118,7 +118,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
 
-                        lass="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">台北市立長安國中</h3>
                             <div class="subheading mb-3">體育班</div>
@@ -126,7 +125,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
 
-                        lass="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">台北市立東園國小</h3>
                             <div class="subheading mb-3">體育班</div>
