--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#關於我">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#經歷">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#學歷">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#興趣">Interests</a></li>
                 </ul>
             </div>
         </nav>
