--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">台北市世新大學</h3>
                             <div class="subheading mb-3">資傳系</div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     
                             <h3 class="mb-0">台北市立陽明高中</h3>
                             <div class="subheading mb-3">體育班</div> 
