--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon" href="#!"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a class="social-icon" href="#!"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </section>
