--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">世新大學</h3>
-                                <a href="https://www.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                        <div>   <a href="https://www.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a> </div>
                             <div class="subheading mb-3">資訊傳播學系</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2021 - Now</span></div>
