--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">陽明高中</h3>
+                            <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                            </h3>
                             <div class="subheading mb-3">體育班</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2018 - June 2021</span></div>
