--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">陽明高中</h3>
+                            <h3 class="mb-0">陽明高中
                             <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
                             </h3>
                             <div class="subheading mb-3">體育班</div>
