--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                     </div>
                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">長安國中</h3>
+                            <h3 class="mb-0">長安國中
+                                <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                            </h3>
                             <div class="subheading mb-3">體育班</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2015 - June 2018</span></div>
@@ -131,7 +133,9 @@
 
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">東園國小</h3>
+                            <h3 class="mb-0">東園國小
+                                <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                            </h3>
                             <div class="subheading mb-3">體育班</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 1999 - June 2015</span></div>
