--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">關於我</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Experience">經歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Education">學歷</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Interests">興趣</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於我</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經歷</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
                 </ul>
             </div>
         </nav>
