--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">陽明高中
-                            <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                            <a href="https://www.ymsh.tp.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
                             </h3>
                             <div class="subheading mb-3">體育班</div>
                         </div>
@@ -124,7 +124,7 @@
                      <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">長安國中
-                                <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                                <a href="https://www.cajh.tp.edu.tw/nss/p/title1"><i class="fa-solid fa-house-user"></i></a>
                             </h3>
                             <div class="subheading mb-3">體育班</div>
                         </div>
@@ -134,7 +134,7 @@
                         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">東園國小
-                                <a href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                                <a href="https://www.tyes.tp.edu.tw/nss/p/index"><i class="fa-solid fa-house-user"></i></a>
                             </h3>
                             <div class="subheading mb-3">體育班</div>
                         </div>
