--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p class="lead mb-5">I am a baseball player, currently studying at Shih Hsin University, back number: No. 7, fielding position: outfielder, I started my baseball career by joining the team since I was a junior, my motto: work hard and persevere to the end.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/michaelwu1202/michaelwu1202.github.io"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/michael.wu.911202"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-icon" href="https://instagram.com/tsunglin_1202_?igshid=YmMyMTA2M2Y="><i class="fa-brands fa-instagram"></i></a>
