--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">專長</a></li>
                 </ul>
             </div>
         </nav>
