--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
                 <span class="d-block d-lg-none">Tsung Lin</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
-           
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">關於我</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">經歷</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">專長</a></li>
+                </ul>
+            </div>
+        </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
