--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">技巧</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">專長</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">專長</a></li>
                 </ul>
             </div>
         </nav>
@@ -192,8 +192,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>I love sports, as long as it is a ball game, I will play. I like to go out and play. When I am bored on holidays, I will ride around for a ride. I also like to play online games.</p>
+                    <p class="mb-0">Every holiday, I will go out for a walk, I don't want to be locked at home all day, I don't want to lose the feeling of being at home, because it's boring.</p>
                 </div>
             </section>
             <hr class="m-0" />
