--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">技巧</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">專長</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">專長</a></li>
                 </ul>
             </div>
         </nav>
@@ -197,10 +197,10 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Spcialties-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Specialties</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
