--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </section>
             <hr class="m-0" />
             <!-- Spcialties-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="Specialties">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Specialties</h2>
                     <ul class="fa-ul mb-0">
