--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Spcialties-->
-            <section class="resume-section" id="Specialties">
+            <!-- Portfolios-->
+            <section class="resume-section" id="Portfolios">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Specialties</h2>
+                    <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
