--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">學歷</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">技巧</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">專長</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Portfolios">作品集</a></li>
                 </ul>
             </div>
@@ -180,6 +181,15 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
+                    <p>I love sports, as long as it is a ball game, I will play. I like to go out and play. When I am bored on holidays, I will ride around for a ride. I also like to play online games.</p>
+                    <p class="mb-0">Every holiday, I will go out for a walk, I don't want to be locked at home all day, I don't want to lose the feeling of being at home, because it's boring.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+             <!-- Specialties-->
+             <section class="resume-section" id="Specialties">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Specialties</h2>
                     <p>I love sports, as long as it is a ball game, I will play. I like to go out and play. When I am bored on holidays, I will ride around for a ride. I also like to play online games.</p>
                     <p class="mb-0">Every holiday, I will go out for a walk, I don't want to be locked at home all day, I don't want to lose the feeling of being at home, because it's boring.</p>
                 </div>
