--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <h1 class="mb-0">
                         吳宗霖
                         <span class="text-primary">Wu Tsung Lin</span>
+                    </div>
                     </h1>
                     <div class="subheading mb-5">
                         台北市萬華區長泰街77號三樓
