--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         台北市萬華區長泰街77號三樓
+                        <br>
                         <a href="mailto:name@email.com">a110070001@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">我是一名棒球員，目前就讀世新大學，背號: 7號 ，守備位置: 外野手，從小三開始加入球隊開啟我的棒球生涯，我的座右銘: 努力不懈，堅持到底。</p>
@@ -189,8 +190,8 @@
              <section class="resume-section" id="Specialties">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Specialties</h2>
-                    <p>I love sports, as long as it is a ball game, I will play. I like to go out and play. When I am bored on holidays, I will ride around for a ride. I also like to play online games.</p>
-                    <p class="mb-0">Every holiday, I will go out for a walk, I don't want to be locked at home all day, I don't want to lose the feeling of being at home, because it's boring.</p>
+                    <p>我的專長是運動，幾乎每項運動都能得心應手，最會打的球是棒球。</p>
+                    <p class="mb-0">My specialty is sports, and I am good at almost every sport, especially baseball.</p>
                 </div>
             </section>
             <hr class="m-0" />
