--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
              <section class="resume-section" id="Specialties">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Specialties</h2>
-                    <p>我的專長是運動，幾乎每項運動都能得心應手，最會打的球是棒球。</p>
-                    <p class="mb-0">My specialty is sports, and I am good at almost every sport, especially baseball.</p>
+                    <p>我的專長是運動，幾乎每項運動都能得心應手，什麼求不會打學就會了，我最會的運動是棒球。</p>
+                    <p class="mb-0">My specialty is sports. I can handle almost every sport. I can learn anything I want without playing. The sport I know best is baseball.</p>
                 </div>
             </section>
             <hr class="m-0" />
