--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         吳宗霖
                         <span class="text-primary">Wu Tsung Lin</span>
                     </h1>
-                    <div class="subheading mb-5">
+                    <div class="address subheading mb-5">
                         台北市萬華區長泰街77號
                         <br>
                         <a href="mailto:name@email.com">a110070001@mail.shu.edu.tw</a>
@@ -190,7 +190,7 @@
              <section class="resume-section" id="Specialties">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Specialties</h2>
-                    <p>我的專長是運動，幾乎每項運動都能得心應手，什麼求不會打學就會了，我最會的運動是棒球。</p>
+                    <p>我的專長是運動，幾乎每項運動都能得心應手，什麼球不會打學就會了，我最會的運動是棒球。</p>
                     <p class="mb-0">My specialty is sports. I can handle almost every sport. I can learn anything I want without playing. The sport I know best is baseball.</p>
                 </div>
             </section>
