--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         吳宗霖
-                        <span class="text-primary">Wu Tsung Lin</span>
+                        <span class="text-primary">Tsung-Lin Wu</span>
                     </h1>
                     <div class="address subheading mb-5">
                         台北市萬華區長泰街77號
