--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">技巧</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">興趣</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Specialties">專長</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Portfolios">作品集</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publications">作品集</a></li>
                 </ul>
             </div>
         </nav>
@@ -192,10 +192,14 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Portfolios-->
-            <section class="resume-section" id="Portfolios">
+            <!-- Publications-->
+            <section class="resume-section" id="Publications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Portfolios</h2>
+                    <h2 class="mb-5">Publications</h2>
+                    <div class="nb-2">
+                        <p>作品的<a href="protfolios.html">詳細介紹</a></p>
+                        <p><a>proman</a></p>
+                    </div>
                     <ul class="fa-ul mb-0">
                     <table class="table">
                         <tr>
