--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <section class="resume-section" id="Publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
-                    <div class="nb-2">
+                    <div class="mb-2">
                         <p>作品的<a href="protfolios.html">詳細介紹</a></p>
                         <p><a>proman</a></p>
                     </div>
