--- a/portfolios.html
+++ b/portfolios.html
@@ -1,3 +1,4 @@
+<html>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -29,3 +30,4 @@
     </div>
   </div>
 </nav>
+</html>
