--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <div class="mb-2">
-                        <p>作品的<a href="protfolios.html">詳細介紹</a></p>
+                        <p>作品的<a href="portfolios.html">詳細介紹</a></p>
                         <p><a>proman</a></p>
                     </div>
                     <ul class="fa-ul mb-0">
