--- a/portfolios.html
+++ b/portfolios.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <!-- Google fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,3 +46,4 @@
         </div>
       </nav>
     </body>
+</html>
