--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <div class="mb-2">
-                        <p>作品的<a href="portfolios.html">詳細介紹</a></p>
-                        <p><a>proman</a></p>
+                        <p>特殊<a href="portfolios.html">事蹟</a></p>
+                        <p><a>Baseball</a></p>
                     </div>
                     <ul class="fa-ul mb-0">
                     <table class="table">
@@ -212,7 +212,7 @@
                             <td><i class="fas fa-trophy text-warning"></i>  2020年 -- 第八屆黑豹旗全國高中棒球大賽 陽明中學青棒隊</td>
                         </tr>
                         <tr>
-                            <td><i class="fas fa-trophy text-warning"></i>  2022年 -- 一百一十一學年度全國大專院校棒球運動聯賽（公開組二級）世新大學棒球隊</td>
+                            <td><i class="fas fa-trophy text-warning"></i>  2022年 -- 一百一十一學年度全國大專院校棒球運動聯賽（公開組二級）第五名</td>
                         </tr>
                         
                                            
