--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <div class="mb-2">
-                        <p>特殊<a href="portfolios.html">事蹟</a></p>
+                        <p>特殊<a href="groovin/me.html">事蹟</a></p>
                         <p><a>Baseball</a></p>
                     </div>
                     <ul class="fa-ul mb-0">
