--- a/me.html
+++ b/me.html
@@ -366,5 +366,9 @@
                 var map = new google.maps.Map(mapElement, mapOptions);
             }
         </script>
+		<!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
 </body>
 </html>
