--- a/me.html
+++ b/me.html
@@ -18,7 +18,7 @@
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-<script src="assets/js/modernizr.custom.js"></script>
+<script src="assets/js/modernizr.custom.js">棒球生涯</script>
 </head>
 <body>
 <header>
