--- a/me.html
+++ b/me.html
@@ -18,7 +18,7 @@
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-<script src="assets/js/modernizr.custom.js">棒球生涯</script>
+<script src="assets/js/modernizr.custom.js"></script>
 </head>
 <body>
 <header>
@@ -33,7 +33,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Groovin</a>
+      <a class="navbar-brand" href="index.html">棒球生涯</a>
     </div>
 
 	<div class="navigation">
