--- a/groovin/me.html
+++ b/groovin/me.html
@@ -39,10 +39,10 @@
 	<div class="navigation">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"><nav>
       <ul class="nav navbar-nav navbar-right">
-        <li class="current"><a href="#intro">Home</a></li>
-		<li><a href="#about">About</a></li>
-		<li><a href="#works">Works</a></li>
-		<li><a href="#contact">Contact</a></li>
+        <li class="current"><a href="#intro">首頁</a></li>
+		<li><a href="#about">關於</a></li>
+		<li><a href="#works">商品</a></li>
+		<li><a href="#contact">登入</a></li>
       </ul></nav>
     </div><!-- /.navbar-collapse -->
 	</div>
