--- a/groovin/me.html
+++ b/groovin/me.html
@@ -55,7 +55,7 @@
 <section id="intro">
 			<ul id="slippry-slider">
 			  <li>
-				<a href="#slide1"><img src="assets/img/slide/A.jpg" alt="Welcome to Groovin!"></a>
+				<a href="#slide1"><img src="assets/img/slide/A3.jpg" alt="Welcome to Groovin!"></a>
 			  </li>
 			  <li>
 				<a href="#slide2"><img src="assets/img/slide/A1.jpg"  alt="This is an awesome bootstrap template"></a>
