--- a/groovin/me.html
+++ b/groovin/me.html
@@ -72,11 +72,11 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="heading">
-				<h3><span>About us</span></h3>
+				<h3><span>關於我</span></h3>
 			</div>
 			<div class="sub-heading">
 				<p>
-					 Creating a visual language around the beliefs of the brands we work with.
+                    我是一名棒球選手 右投左打  外野手  
 				</p>
 			</div>
 		</div>
