--- a/groovin/me.html
+++ b/groovin/me.html
@@ -93,11 +93,11 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<div class="heading">
-				<h3><span>Recent works</span></h3>
+				<h3><span>記錄我帥氣的模樣</span></h3>
 			</div>
 			<div class="sub-heading">
 				<p>
-					 We have a history of doing what our name implies, creating a visual language around the beliefs of the brands we work with.
+					 棒球是我最喜歡的運動，這些照片把我在球場上展現拚盡追逐夢想的模樣，完美的呈現出來。
 				</p>
 			</div>
 		</div>
