--- a/index.html
+++ b/index.html
@@ -197,16 +197,14 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <div class="mb-2">
-                        <p>我的棒球<a href="groovin/me.html">生涯</a></p>
+                        <p>我的棒球<a href="groovin/me.html">生</a></p>
                         <p><a>My favorite sport is baseball</a></p>
                     </div>
                     <ul class="fa-ul mb-0">
                     <table class="table">
                         <tr>
                             <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 第六十九屆世界少年棒球錦標賽 中華少棒代表隊</td>
-                            <h3>
                             <a class="expedu_icon" href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
-                        </h3>
                         </tr>
                         <tr>
                             <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 104年謝國城盃全國少棒錦標賽 台北市代表隊</td>
