--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <table class="table">
                         <tr>
                             <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 第六十九屆世界少年棒球錦標賽 中華少棒代表隊</td>
-                            <a class="expedu_icon" href="https://ics.wp.shu.edu.tw/"><i class="fa-solid fa-house-user"></i></a>
+                            <a class="expedu_icon" href="https://ics.wp.shu.edu.tw/"><i class="bi bi-arrow-down-right-square-fill"></i></i></a>
                         </tr>
                         <tr>
                             <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 104年謝國城盃全國少棒錦標賽 台北市代表隊</td>
