--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <div class="mb-2">
-                        <p>我的棒球<a href="groovin/me.html">生</a></p>
+                        <p>我的棒球<a href="groovin/me.html">生涯</a></p>
                         <p><a>My favorite sport is baseball</a></p>
                     </div>
                     <ul class="fa-ul mb-0">
