--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <p>我的棒球<a href="groovin/me.html">生涯</a></p>
                         <p><a>My favorite sport is baseball</a></p>
                     </div>
-                    <p><a href=" https://www.youtube.com/watch?v=F3WW_Goni14" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">精采好球</a></p>
+                    <p><a href=" https://www.youtube.com/watch?v=F3WW_Goni14" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Primary link</a></p>
                     <ul class="fa-ul mb-0">
                     <table class="table">
                         <tr>
