--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <ul class="fa-ul mb-0">
                     <table class="table">
                         <tr>
-                            <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 第六十九屆世界少年棒球錦標賽 中華少棒代表隊</td>
+                            <td><i class="fas fa-trophy text-warning"></i>   <p>2015年 -- 第六十九屆世界少年棒球錦標賽<a href="https://twbsball.dils.tku.edu.tw/wiki/index.php/2015%E5%B9%B4%E7%AC%AC%E5%85%AD%E5%8D%81%E4%B9%9D%E5%B1%86%E4%B8%96%E7%95%8C%E5%B0%91%E5%B9%B4%E6%A3%92%E7%90%83%E9%8C%A6%E6%A8%99%E8%B3%BD">中華少棒代表隊</a></p> </td>
                         </tr>
                         <tr>
                             <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 104年謝國城盃全國少棒錦標賽 台北市代表隊</td>
