--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                             <td><i class="fas fa-trophy text-warning"></i>  2015年 -- 104年謝國城盃全國少棒錦標賽 台北市代表隊</td>
                         </tr>
                         <tr>
-                            <td><i class="fas fa-trophy text-warning"></i>  2020年 -- 第八屆黑豹旗全國高中棒球大賽 陽明高中青棒隊</td>
+                            <td><i class="fas fa-trophy text-warning"></i>
+                                <p> 2020年 -- 第八屆黑豹旗全國高中棒球大賽<a href="">陽明高中青棒隊</a></p> </td>
                         </tr>
                         <tr>
                             <td><i class="fas fa-trophy text-warning"></i>  2022年 -- 一百一十一學年度全國大專院校棒球運動聯賽（公開組二級）第五名</td>
