--- a/groovin/me.html
+++ b/groovin/me.html
@@ -145,7 +145,7 @@
 			<div class="col-md-12">
 				<div class="aligncenter">
 					<p>
-						 &copy;2023  Introduction to my interests <a href="http://bootstraptaste.com">BootstrapTaste</a>.
+						 &copy;2023  Introduction to my interests <a href="http://bootstraptaste.com">Baseball</a>.
 					</p>
                     <!-- 
                         All links in the footer should remain intact. 
