--- a/groovin/me.html
+++ b/groovin/me.html
@@ -77,7 +77,7 @@
 			<div class="sub-heading">
 				<p>
                     我是一名棒球選手 右投左打 外野手，
-                    從小三開始加入球隊開啟我的棒球生涯
+                    從小三開始加入球隊開啟我的棒球生涯，
                     努力不懈，堅持到底是我的座右銘
 
 				</p>
