--- a/groovin/me.html
+++ b/groovin/me.html
@@ -78,7 +78,11 @@
 				<p>
                     我是一名棒球選手 右投左打 外野手，
                     從小三開始加入球隊開啟我的棒球生涯，
-                    努力不懈，堅持到底是我的座右銘
+					家人的支持是我最大的動力，
+					受傷時給於我滿滿的關懷，
+					才能一路打到大學，
+                    努力不懈，堅持到底
+					是我的座右銘
 
 				</p>
 			</div>
