--- a/groovin/me.html
+++ b/groovin/me.html
@@ -101,7 +101,8 @@
 			</div>
 			<div class="sub-heading">
 				<p>
-					 棒球是我最喜歡的運動，這些照片把我在球場上展現拚盡追逐夢想的模樣，完美的呈現出來。
+					 棒球是我最喜歡的運動，這些照片中把我在球場上展現拚盡追逐夢想的模樣，
+					 完美的呈現出來，讓大家看到不一樣的我!!
 				</p>
 			</div>
 		</div>
